FIX: The values in the node attribute ["jetty"]["add_confs"] are now add in jetty.conf as expected.

--- a/templates/default/jetty.conf.erb
+++ b/templates/default/jetty.conf.erb
@@ -10,6 +10,6 @@
 # arguments will be in addition to those found in the
 # start.ini file
 # =======================================================
-<% for @conf in @node['jetty']['add_confs'] -%>
+<% for @conf in node['jetty']['add_confs'] %>
 <%= @conf %>
-<% end -%>
+<% end %>
