--- a/templates/default/jetty.default.erb
+++ b/templates/default/jetty.default.erb
@@ -3,5 +3,5 @@ export JETTY_HOME=<%= node.jetty.home %>
 export JETTY_USER=<%= node.jetty.user %>
 export JETTY_PORT=<%= node.jetty.port %>
 export JETTY_ARGS="<%= node.jetty.args %>"
-export JAVA_OPTIONS="<%= node.jetty.java_options %>"
+export JAVA_OPTIONS="<%= node.jetty.java_options.kind_of?(Array) ?  node.jetty.java_options.join(' ') : node.jetty.java_options %>"
 export JETTY_LOGS="<%= node.jetty.logs %>"
