--- a/templates/default/jetty-9.sh.erb
+++ b/templates/default/jetty-9.sh.erb
@@ -436,6 +436,8 @@ case "$ACTION" in
       exit
     fi
 
+    ulimit -n <%= node['jetty']['fd_limit'] %>
+
     if [ $UID -eq 0 ] && type start-stop-daemon > /dev/null 2>&1
     then
       unset CH_USER
