--- a/templates/default/jetty-9.sh.erb
+++ b/templates/default/jetty-9.sh.erb
@@ -466,7 +466,7 @@ case "$ACTION" in
         touch "$JETTY_PID"
         chown "$JETTY_USER" "$JETTY_PID"
         # FIXME: Broken solution: wordsplitting, pathname expansion, arbitrary command execution, etc.
-        su - "$JETTY_USER" -c "
+        su - "$JETTY_USER" -s /bin/bash -c "
           exec ${RUN_CMD[*]} --daemon &
           disown \$!
           echo \$! > '$JETTY_PID'"
